--- a/Statinf/tests-de-khi-deux-chi2.html
+++ b/Statinf/tests-de-khi-deux-chi2.html
@@ -31,7 +31,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-<link rel="prev" href="exercices-5.html"/>
+<link rel="prev" href="tp.html"/>
 <link rel="next" href="exercices-6.html"/>
 <script src="book_assets/jquery-2.2.3/jquery.min.js"></script>
 <link href="book_assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -312,12 +312,14 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="6.2" data-path="tests-dhypotheses-sur-deux-echantillons.html"><a href="tests-dhypotheses-sur-deux-echantillons.html#comparaison-de-deux-proportions"><i class="fa fa-check"></i><b>6.2</b> Comparaison de deux proportions</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-5.html"><a href="exercices-5.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp.html"><a href="tp.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Séance 9</b></span></li>
 <li class="chapter" data-level="7" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html"><i class="fa fa-check"></i><b>7</b> Tests de Khi-deux <span class="math inline">\(\chi^2\)</span></a><ul>
 <li class="chapter" data-level="7.1" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dajustement-de-chi2"><i class="fa fa-check"></i><b>7.1</b> Test d’ajustement de <span class="math inline">\(\chi^2\)</span></a></li>
 <li class="chapter" data-level="7.2" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dindependance-de-chi2"><i class="fa fa-check"></i><b>7.2</b> Test d’indépendance de <span class="math inline">\(\chi^2\)</span></a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-6.html"><a href="exercices-6.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-1.html"><a href="tp-1.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html#notions-de-probabilites"><i class="fa fa-check"></i>Notions de Probabilités</a><ul>
@@ -470,8 +472,14 @@ bien sûr, s’il existe une interaction entre deux variables catégoriques (e.g
 <p><strong>La procédure du test</strong></p>
 <p>On peut souvent classer les <span class="math inline">\(n\)</span> éléments d’un échantillon suivant deux critères différents, c’est-à-dire selon les valeurs de deux variables aléatoires discrètes ou qualitatives. Il est alors intéressant de savoir si les deux variables sont statistiquement indépendantes. On peut, par exemple,
 considérer la population des ingénieurs du pays et vouloir déterminer si le salaire de départ est
-indépendant de la discipline étudiée. Supposons que la première variable <span class="math inline">\(X\)</span> possède <span class="math inline">\(r\)</span> catégories
-et que la deuxième <span class="math inline">\(Y\)</span> en a <span class="math inline">\(c\)</span>. Appelons <span class="math inline">\(O_{i j}\)</span> la fréquence observée pour la catégorie <span class="math inline">\(i\)</span> de <span class="math inline">\(X\)</span> et pour la catégorie <span class="math inline">\(j\)</span> de <span class="math inline">\(Y\)</span>. En règle générale, les données apparaîtront comme dans le tableau suivant. Un tel tableau est appelé “tableau de contingences” ou “tableau de fréquences” (<span class="math inline">\(r\)</span> lignes et <span class="math inline">\(c\)</span> colonnes).</p>
+indépendant de la discipline étudiée.</p>
+<p>On considère dans ce paragraphe deux variables qualitatives observées simultanément sur <span class="math inline">\(n\)</span> individus. On suppose que la première, notée <span class="math inline">\(X,\)</span> possède <span class="math inline">\(r\)</span> modalités notées <span class="math inline">\(x_{1}, \ldots, x_{\ell}, \ldots, x_{r},\)</span> et que la seconde, notée <span class="math inline">\(Y,\)</span> possède <span class="math inline">\(c\)</span> modalités notées <span class="math inline">\(y_{1}, \ldots, y_{h}, \ldots, y_{c}\)</span>.</p>
+<p>Ces données sont présentées dans un tableau à double entrée, appelé <strong>tables
+de contingence</strong>, dans lequel on dispose les modalités de <span class="math inline">\(X\)</span> en lignes et celles
+de <span class="math inline">\(Y\)</span> en colonnes. Ce tableau est donc de dimension <span class="math inline">\(r \times c\)</span> et a pour élément
+générique le nombre <span class="math inline">\(n_{\ell h}\)</span> d’observations conjointes des modalités <span class="math inline">\(x_{\ell}\)</span> de <span class="math inline">\(X\)</span> et
+<span class="math inline">\(y_{h}\)</span> de <span class="math inline">\(Y\)</span>; les quantités <span class="math inline">\(n_{\ell h}\)</span> sont appelées les effectifs conjoints.</p>
+<p>Une table de contingence se présente donc sous la forme suivante:</p>
 <table class="table table-striped" style="width: auto !important; margin-left: auto; margin-right: auto;">
 <tbody>
 <tr>
@@ -484,7 +492,7 @@ et que la deuxième <span class="math inline">\(Y\)</span> en a <span class="mat
 <span class="math inline">\(\ldots\)</span>
 </td>
 <td style="text-align:left;">
-<span class="math inline">\(y_j\)</span>
+<span class="math inline">\(y_h\)</span>
 </td>
 <td style="text-align:left;">
 <span class="math inline">\(\ldots\)</span>
@@ -492,23 +500,67 @@ et que la deuxième <span class="math inline">\(Y\)</span> en a <span class="mat
 <td style="text-align:left;">
 <span class="math inline">\(y_c\)</span>
 </td>
+<td style="text-align:left;">
+sommes
+</td>
 </tr>
 <tr>
 <td style="text-align:left;">
 <span class="math inline">\(x_1\)</span>
 </td>
 <td style="text-align:left;">
-<span class="math inline">\(O_{11}\)</span>
+<span class="math inline">\(n_{11}\)</span>
 </td>
 <td style="text-align:left;">
 </td>
 <td style="text-align:left;">
-<span class="math inline">\(O_{1j}\)</span>
+<span class="math inline">\(n_{1h}\)</span>
 </td>
 <td style="text-align:left;">
 </td>
 <td style="text-align:left;">
-<span class="math inline">\(O_{1c}\)</span>
+<span class="math inline">\(n_{1c}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{1\bullet}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<span class="math inline">\(\vdots\)</span>
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<span class="math inline">\(x_{\ell}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{\ell 1}\)</span>
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{\ell h}\)</span>
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{\ell c}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{\ell \bullet}\)</span>
 </td>
 </tr>
 <tr>
@@ -516,37 +568,6 @@ et que la deuxième <span class="math inline">\(Y\)</span> en a <span class="mat
 <span class="math inline">\(\vdots\)</span>
 </td>
 <td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-<span class="math inline">\(x_{i}\)</span>
-</td>
-<td style="text-align:left;">
-<span class="math inline">\(O_{i 1}\)</span>
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-<span class="math inline">\(O_{i j}\)</span>
-</td>
-<td style="text-align:left;">
-</td>
-<td style="text-align:left;">
-<span class="math inline">\(O_{i c}\)</span>
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-<span class="math inline">\(\vdots\)</span>
 </td>
 <td style="text-align:left;">
 </td>
@@ -564,21 +585,49 @@ et que la deuxième <span class="math inline">\(Y\)</span> en a <span class="mat
 <span class="math inline">\(x_r\)</span>
 </td>
 <td style="text-align:left;">
-<span class="math inline">\(O_{r 1}\)</span>
+<span class="math inline">\(n_{r 1}\)</span>
 </td>
 <td style="text-align:left;">
 </td>
 <td style="text-align:left;">
-<span class="math inline">\(O_{r j}\)</span>
+<span class="math inline">\(n_{r h}\)</span>
 </td>
 <td style="text-align:left;">
 </td>
 <td style="text-align:left;">
-<span class="math inline">\(O_{rc}\)</span>
+<span class="math inline">\(n_{rc}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{r\bullet}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+sommes
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{\bullet 1}\)</span>
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{\bullet h}\)</span>
+</td>
+<td style="text-align:left;">
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n_{\bullet c}\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(n\)</span>
 </td>
 </tr>
 </tbody>
 </table>
+<p>Les quantités <span class="math inline">\(n_{\ell \bullet}(\ell=1, \ldots, r)\)</span> et <span class="math inline">\(n_{\bullet h}(h=1, \ldots, c)\)</span> sont appelées les
+effectifs marginaux; ils sont définis par <span class="math inline">\(n_{\ell \bullet}=\sum_{h=1}^{c} n_{\ell h}\)</span> et <span class="math inline">\(n_{\bullet h}=\sum_{\ell=1}^{r} n_{\ell h}\)</span>
+et ils vérifient <span class="math inline">\(\sum_{\ell=1}^{r} n_{\ell \bullet}=\sum_{h=1}^{c} n_{\bullet h}=n\)</span>.</p>
+<p>De façon analogue, on peut définir les notions de fréquences conjointes et de fréquences marginales.</p>
 <p>On désire tester l’hypothèse que les variable <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sont indépendantes:</p>
 <p><span class="math display">\[
 \begin{aligned}
@@ -586,18 +635,18 @@ H_{0}&amp;: X \text { et } Y \text { sont indépendantes; } \\
 H_{1}&amp;: X \text { et } Y \text { sont dépendantes. }
 \end{aligned}
 \]</span>
-Si l’on rejette cette hypothèse nulle, on conclut qu’il existe une certaine interaction entre les deux critères de classement. Les procédure de test exactes sont difficiles à obtenir, mais on présente ici une statistique de test approximative qui est valide pour les grandes tailles d’échantillon.</p>
-<p>Supposons que <span class="math inline">\(p_{ij}\)</span> est la probabilité qu’un élément choisi au hasard soit dans la <span class="math inline">\(ij\)</span>-ième cellule, c’est-à-dire que les variables prennent les valeurs <span class="math inline">\(X=i\)</span> et <span class="math inline">\(Y=j\)</span>. Dans la mesure où les deux classements sont indépendants, alors, <span class="math inline">\(p_{ij}=P(X=i,Y=j)=P(X=i)P(Y=j)\)</span>. Les estimateurs du maximum de vraisemblance de <span class="math inline">\(P(X=i)\)</span> et de <span class="math inline">\(P(Y=j)\)</span> sont respectivement</p>
+Si l’on rejette cette hypothèse nulle, on conclut qu’il existe une certaine interaction entre les deux critères de classement. Les procédures de test exactes sont difficiles à obtenir, mais on présente ici une statistique de test approximative qui est valide pour les grandes tailles d’échantillon.</p>
+<p><strong>La statistique Khi-deux</strong></p>
+<p>Il est courant en statistique de comparer une table de contingence observée,
+d’effectif conjoint générique <span class="math inline">\(n_{\ell h},\)</span> à une table de contingence donnée a priori
+(et appelée standard), d’effectif conjoint générique <span class="math inline">\(s_{\ell h},\)</span> en calculant la quantié</p>
 <p><span class="math display">\[
-\hat{P}(X=i)= \frac{1}{n}\sum_{j=1}^c O_{ij} \quad \text{ et } \quad \hat{P}(Y=j)= \frac{1}{n}\sum_{i=1}^r O_{ij}
+\sum_{\ell=1}^{r} \sum_{h=1}^{c} \frac{\left(n_{\ell h}-s_{\ell h}\right)^{2}}{s_{\ell h}}
 \]</span></p>
-<p>Donc, si on suppose l’indépendance, l’estimateur du nombre espéré d’éléments dans chaque classe est</p>
+<p>De façon naturelle, pour mesurer la liaison sur une table de contingence, on
+utilise donc l’indice appelé khi-deux (chi-square) et défini comme suit:</p>
 <p><span class="math display">\[
-\hat{E}_{ij}= n \hat{P}(X=i) \hat{P}(Y=j) = \frac{1}{n} \sum_{m=1}^c O_{im} \sum_{k=1}^r O_{kj}
-\]</span></p>
-<p>Ainsi, pour les grandes tailles <span class="math inline">\(n\)</span> (ou plutôt pour des fréquences espérées pas trop petites), on a la distribution approximative suivantes sous <span class="math inline">\(H_0\)</span>:</p>
-<p><span class="math display">\[
-U_0 = \frac{1}{n}\sum_{i=1}^r\sum_{j=1}^c \frac{(O_{ij} - \hat{E}_{ij})^2}{\hat{E}_{ij}} \thicksim \chi^2_{(r-1)(c-1)}  
+U_0 = \chi^{2}=\sum_{\ell=1}^{r} \sum_{h=1}^{c} \frac{\left(n_{\ell h}-\frac{n_{\ell\bullet} n_{\bullet h}}{n}\right)^{2}}{\frac{n_{\ell\bullet} n_{\bullet h}}{n}}=n\left[\sum_{\ell=1}^{r} \sum_{h=1}^{c} \frac{n_{\ell h}^{2}}{n_{\ell\bullet} n_{\bullet h}}-1\right] \thicksim \chi^2_{(r-1)(c-1)} 
 \]</span></p>
 <p>Comme dans le cas du test d’ajustement du <span class="math inline">\(\chi^2\)</span> , on peut interpréter la statistique <span class="math inline">\(U_0\)</span> comme une “distance” entre le modèle d’indépendance hypothétique et les fréquences observées. Si cette distance est trop grande, il faut rejeter le modèle.</p>
 <div class="rmdinsight">
@@ -612,7 +661,7 @@ U_0 = \frac{1}{n}\sum_{i=1}^r\sum_{j=1}^c \frac{(O_{ij} - \hat{E}_{ij})^2}{\hat{
           </div>
         </div>
       </div>
-<a href="exercices-5.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="tp.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="exercices-6.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
