--- a/Statinf/variables-aleatoires-continues.html
+++ b/Statinf/variables-aleatoires-continues.html
@@ -312,12 +312,14 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="6.2" data-path="tests-dhypotheses-sur-deux-echantillons.html"><a href="tests-dhypotheses-sur-deux-echantillons.html#comparaison-de-deux-proportions"><i class="fa fa-check"></i><b>6.2</b> Comparaison de deux proportions</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-5.html"><a href="exercices-5.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp.html"><a href="tp.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Séance 9</b></span></li>
 <li class="chapter" data-level="7" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html"><i class="fa fa-check"></i><b>7</b> Tests de Khi-deux <span class="math inline">\(\chi^2\)</span></a><ul>
 <li class="chapter" data-level="7.1" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dajustement-de-chi2"><i class="fa fa-check"></i><b>7.1</b> Test d’ajustement de <span class="math inline">\(\chi^2\)</span></a></li>
 <li class="chapter" data-level="7.2" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dindependance-de-chi2"><i class="fa fa-check"></i><b>7.2</b> Test d’indépendance de <span class="math inline">\(\chi^2\)</span></a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-6.html"><a href="exercices-6.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-1.html"><a href="tp-1.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html#notions-de-probabilites"><i class="fa fa-check"></i>Notions de Probabilités</a><ul>
@@ -438,7 +440,7 @@ non dénombrable. On peut citer par exemple, l’heure d’arrivée d’un train
 par <span class="math inline">\(X\)</span> une telle variable.</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-242" class="definition"><strong>Définition 7.10  </strong></span><span class="math inline">\(X\)</span> est une <strong>variable aléatoire continue</strong> s’il existe une fonction <span class="math inline">\(f\)</span>
+<p><span id="def:unnamed-chunk-245" class="definition"><strong>Définition 7.10  </strong></span><span class="math inline">\(X\)</span> est une <strong>variable aléatoire continue</strong> s’il existe une fonction <span class="math inline">\(f\)</span>
 non négative définie pour tout <span class="math inline">\(x \in \mathbb{R}\)</span> et vérifiant pour tout
 ensemble <span class="math inline">\(B\)</span> de nombres réels la propriété</p>
 <p><span class="math display" id="eq:def">\[\begin{equation}
@@ -473,7 +475,7 @@ Figure 7.2: L’aire hachurée correspond à des probabilités. <span class="mat
 </div>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-243" class="definition"><strong>Définition 7.11  </strong></span>Pour toute variable aléatoire continue <span class="math inline">\(X\)</span> de densité <span class="math inline">\(f\)</span>:</p>
+<p><span id="def:unnamed-chunk-246" class="definition"><strong>Définition 7.11  </strong></span>Pour toute variable aléatoire continue <span class="math inline">\(X\)</span> de densité <span class="math inline">\(f\)</span>:</p>
 <ul>
 <li><p><span class="math inline">\(f(x) \ge 0 \quad \forall \, x \in \mathbb{R}\)</span></p></li>
 <li><p><span class="math inline">\(\int_{-\infty}^{+\infty}f(x)dx = 1\)</span></p></li>
@@ -518,7 +520,7 @@ probabilité <span class="math display">\[f(x)= \left\lbrace
 <h2>Fonction de répartition d’une v.a.c</h2>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-246" class="definition"><strong>Définition 7.12  </strong></span>Si comme pour les variables aléatoires discrètes, on définit la fonction
+<p><span id="def:unnamed-chunk-249" class="definition"><strong>Définition 7.12  </strong></span>Si comme pour les variables aléatoires discrètes, on définit la fonction
 de répartition de <span class="math inline">\(X\)</span> par:</p>
 <p><span class="math display">\[\begin{aligned}
     F_X \colon  \mathbb{R} &amp;\longrightarrow \mathbb{R} \\
@@ -625,7 +627,7 @@ Déterminer la densité de: <span class="math inline">\(Y=3X+1\)</span>, <span c
 <h3>Espérance d’une v.a.c</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-248" class="definition"><strong>Définition 7.13  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire absolument continue de densité <span class="math inline">\(f\)</span>, on
+<p><span id="def:unnamed-chunk-251" class="definition"><strong>Définition 7.13  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire absolument continue de densité <span class="math inline">\(f\)</span>, on
 appelle espérance de X, le réel <span class="math inline">\(E(X)\)</span>, défini par:</p>
 <span class="math display">\[E(X)= \int_{-\infty}^{+\infty}x f(x) dx\]</span> si cette intégrale est
 convergente.
@@ -669,7 +671,7 @@ dispersion qui correspond au moment centré d’ordre 2 de la variable
 aléatoire <span class="math inline">\(X\)</span>.</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-250" class="definition"><strong>Définition 7.14  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une espérance <span class="math inline">\(E(X)\)</span>, on appelle
+<p><span id="def:unnamed-chunk-253" class="definition"><strong>Définition 7.14  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une espérance <span class="math inline">\(E(X)\)</span>, on appelle
 variance de <span class="math inline">\(X\)</span> le réel</p>
 <p><span class="math display">\[V(X)=E\big([X-E(X)]^2\big) = E(X^2) - [E(X)]^2\]</span> Si <span class="math inline">\(X\)</span> est une
 variable aléatoire continue, on calcule <span class="math inline">\(E(X^2)\)</span> en utilisant le
@@ -687,7 +689,7 @@ théorème <a href="variables-aleatoires-continues.html#thm:transfert">7.7</a>,<
 </ul>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-251" class="definition"><strong>Définition 7.15  (Ecart-type)  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une variance <span class="math inline">\(V(X)\)</span>, on appelle
+<p><span id="def:unnamed-chunk-254" class="definition"><strong>Définition 7.15  (Ecart-type)  </strong></span>Si <span class="math inline">\(X\)</span> est une variable aléatoire ayant une variance <span class="math inline">\(V(X)\)</span>, on appelle
 écart-type de <span class="math inline">\(X\)</span>, le réel:</p>
 <span class="math display">\[\sigma_X = \sqrt{V(X)}\]</span>
 </div>
@@ -702,7 +704,7 @@ théorème <a href="variables-aleatoires-continues.html#thm:transfert">7.7</a>,<
 répartis sur un intervalle.</p>
 
 <div class="definition">
-<span id="def:unnamed-chunk-252" class="definition"><strong>Définition 7.16  </strong></span>La variable aléatoire <span class="math inline">\(X\)</span> suit une loi uniforme sur le segment <span class="math inline">\([a,b]\)</span>
+<span id="def:unnamed-chunk-255" class="definition"><strong>Définition 7.16  </strong></span>La variable aléatoire <span class="math inline">\(X\)</span> suit une loi uniforme sur le segment <span class="math inline">\([a,b]\)</span>
 avec <span class="math inline">\(a &lt; b\)</span> si sa densité de probabilité est donnée par
 <span class="math display">\[f(x)= \left\lbrace
       \begin{array}{ll}
@@ -750,7 +752,7 @@ Figure 7.4: Fonction de densité de <span class="math inline">\(U([a,b]\)</span>
 <h3>Loi exponentielle <span class="math inline">\(\mathcal{E}(\lambda)\)</span></h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-254" class="definition"><strong>Définition 7.17  </strong></span>On dit qu’une variable aléatoire <span class="math inline">\(X\)</span> est <strong>exponentielle</strong> (ou suit la
+<p><span id="def:unnamed-chunk-257" class="definition"><strong>Définition 7.17  </strong></span>On dit qu’une variable aléatoire <span class="math inline">\(X\)</span> est <strong>exponentielle</strong> (ou suit la
 loi exponentielle) de paramètre <span class="math inline">\(\lambda\)</span> si sa densité est donnée par</p>
 <p><span class="math display">\[f(x)= \left\lbrace
       \begin{array}{ll}
@@ -792,7 +794,7 @@ rapprocher de distributions exponentielles.
 <h3>Loi Normale ou de Laplace-Gauss <span class="math inline">\(\mathcal{N}(\mu,\sigma^2)\)</span></h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-256" class="definition"><strong>Définition 7.18  </strong></span>Une variable aléatoire <span class="math inline">\(X\)</span> est dite <strong>normale</strong> avec paramètres <span class="math inline">\(\mu\)</span> et
+<p><span id="def:unnamed-chunk-259" class="definition"><strong>Définition 7.18  </strong></span>Une variable aléatoire <span class="math inline">\(X\)</span> est dite <strong>normale</strong> avec paramètres <span class="math inline">\(\mu\)</span> et
 <span class="math inline">\(\sigma^2\)</span> si la densité de <span class="math inline">\(X\)</span> est donnée par</p>
 <p><span class="math display">\[f(x) = \frac{1}{\sigma \sqrt{2\pi}} e^{-(x - \mu)^2/2\sigma^2} \quad \quad \forall \,\, x \in \mathbb{R}\]</span></p>
 Avec <span class="math inline">\(\mu \in \mathbb{R}\)</span> et <span class="math inline">\(\sigma \in \mathbb{R}^{+}\)</span>. On dit que
@@ -822,7 +824,7 @@ Figure 7.5: Représentation graphique de la densité d’une loi normale. Remarq
 </ul>
 
 <div class="theorem">
-<span id="thm:unnamed-chunk-257" class="theorem"><strong>Théorème 7.8  (Stabilité de la loi normale)  </strong></span>Soit <span class="math inline">\(X_1\)</span> et <span class="math inline">\(X_2\)</span> deux variables
+<span id="thm:unnamed-chunk-260" class="theorem"><strong>Théorème 7.8  (Stabilité de la loi normale)  </strong></span>Soit <span class="math inline">\(X_1\)</span> et <span class="math inline">\(X_2\)</span> deux variables
 aléatoires normales et indépendantes de paramètres respectifs
 <span class="math inline">\((\mu_1,\sigma_1^2)\)</span> et <span class="math inline">\((\mu_2,\sigma_2^2)\)</span>, alors leur somme <span class="math inline">\(X_1+X_2\)</span>
 est une variable aléatoire normale de paramètres
@@ -834,7 +836,7 @@ est une variable aléatoire normale de paramètres
 <h3>Loi Normale centrée réduite <span class="math inline">\(\mathcal{N}(0,1)\)</span></h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-258" class="definition"><strong>Définition 7.19  </strong></span>Une variable aléatoire continue <span class="math inline">\(X\)</span> suit une <strong>loi normale centrée
+<p><span id="def:unnamed-chunk-261" class="definition"><strong>Définition 7.19  </strong></span>Une variable aléatoire continue <span class="math inline">\(X\)</span> suit une <strong>loi normale centrée
 réduite</strong> si sa densité de probabilité est donnée par</p>
 <p><span class="math display">\[\begin{equation}
 f(x) =  \frac{1}{{\sqrt {2\pi } }}e^{- \frac{1}{2} x^2} \quad \quad \forall \,\, x \in \mathbb{R}
@@ -854,7 +856,7 @@ Figure 7.6: (gauche): Densité d’une loi normale centrée réduite <span class
 <h3>Relation entre loi normale et loi normale centrée réduite</h3>
 
 <div class="theorem">
-<span id="thm:unnamed-chunk-259" class="theorem"><strong>Théorème 7.9  (Relation avec la loi normale)  </strong></span>Si <span class="math inline">\(X\)</span> suit une loi normale
+<span id="thm:unnamed-chunk-262" class="theorem"><strong>Théorème 7.9  (Relation avec la loi normale)  </strong></span>Si <span class="math inline">\(X\)</span> suit une loi normale
 <span class="math inline">\(\mathcal{N}(\mu,\sigma^2)\)</span>, alors <span class="math inline">\(Z= \frac{X-\mu}{\sigma}\)</span> est une
 variable centrée réduite qui suit la loi normale centrée réduite
 <span class="math inline">\(\mathcal{N}(0,1)\)</span>.
@@ -869,7 +871,7 @@ les probabilités associées à toutes variables aléatoires normales
 réduite.</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-260" class="definition"><strong>Définition 7.20  </strong></span>On appelle fonction <span class="math inline">\(\Phi\)</span>, la fonction de répartition de la loi normale
+<p><span id="def:unnamed-chunk-263" class="definition"><strong>Définition 7.20  </strong></span>On appelle fonction <span class="math inline">\(\Phi\)</span>, la fonction de répartition de la loi normale
 centrée réduite <span class="math inline">\(\mathcal{N}(0,1)\)</span>, telle que</p>
 <span class="math display">\[\forall \,\, x \in \mathbb{R} \quad \Phi(x) = P(X \le x) =  \frac{1}{{\sqrt {2\pi}}} \int_{-\infty}^x f(t)dt\]</span>
 </div>
@@ -932,7 +934,7 @@ Figure 7.7: La loi de probabilité d’une variable aléatoire <span class="math
 <h3>Loi de <span class="math inline">\(\chi^{2}\)</span> de Pearson</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-262" class="definition"><strong>Définition 7.21  </strong></span>Soit <span class="math inline">\(X_1,X_2,\ldots,X_n\)</span>, <span class="math inline">\(n\)</span> variables <strong>normales centrées réduites</strong>,
+<p><span id="def:unnamed-chunk-265" class="definition"><strong>Définition 7.21  </strong></span>Soit <span class="math inline">\(X_1,X_2,\ldots,X_n\)</span>, <span class="math inline">\(n\)</span> variables <strong>normales centrées réduites</strong>,
 et <span class="math inline">\(Y\)</span> la variable aléatoire définie par</p>
 <span class="math display">\[Y = X_1^2 + X_2^2 + \ldots + X_i^2 + \ldots + X_n^2 = \sum_{i=1}^n X_i^2\]</span>
 On dit que <span class="math inline">\(Y\)</span> suit la loi de <span class="math inline">\(\chi^2\)</span> (ou loi de Pearson) à <span class="math inline">\(n\)</span> degrés
@@ -953,14 +955,14 @@ caractères qualitatifs. Ce sont les <em>tests du khi-deux</em>.
 <li><p><span class="math inline">\(E(Y)= n\)</span></p></li>
 <li><p><span class="math inline">\(V(Y) = 2n\)</span></p></li>
 </ul>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-264-1.png" width="80%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-267-1.png" width="80%" style="display: block; margin: auto;" /></p>
 <p>L’augmentation de degré de liberté (<span class="math inline">\(n\)</span>) déplace la distribution vers la droite (le mode devient plus grand) et augmente la dispersion (la variance de la distribution augmente).</p>
 </div>
 <div id="loi-de-student-stn" class="section level3 unnumbered">
 <h3>Loi de Student <span class="math inline">\(St(n)\)</span></h3>
 
 <div class="definition">
-<span id="def:unnamed-chunk-265" class="definition"><strong>Définition 7.22  </strong></span>Soit <span class="math inline">\(U\)</span> une variable aléatoire suivant une loi <strong>normale centrée
+<span id="def:unnamed-chunk-268" class="definition"><strong>Définition 7.22  </strong></span>Soit <span class="math inline">\(U\)</span> une variable aléatoire suivant une loi <strong>normale centrée
 réduite</strong> <span class="math inline">\(\mathcal{N}(0,1)\)</span> et <span class="math inline">\(V\)</span> une variable aléatoire suivant une
 loi de <span class="math inline">\(\chi^2(n)\)</span>, <span class="math inline">\(U\)</span> et <span class="math inline">\(V\)</span> étant indépendantes, on dit alors que
 <span class="math inline">\(T_n = \frac{U}{\sqrt{\frac{V}{n}}}\)</span> suit une <strong>loi de Student</strong> à <span class="math inline">\(n\)</span>
@@ -974,14 +976,14 @@ paramètres comme la moyenne et dans l’estimation de paramètres de la
 population à partir de données sur un échantillon (Test de Student).
 </div>
 
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-267-1.png" width="80%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-270-1.png" width="80%" style="display: block; margin: auto;" /></p>
 <p>Le graphique de plusieurs densités de la loi de Student illustre le suivant: à mesure que les degrés de liberté augmentent, la forme de la densité de Student se rapproche de celle d’une courbe de la loi normale centrée réduite. Déjà pour <span class="math inline">\(n = 25\)</span>, nous trouvons peu de différence avec la densité normale standard. Si <span class="math inline">\(n\)</span> est petit, nous trouvons que la distribution a des queues plus lourdes qu’une normale, c’est-à-dire qu’elle a la forme d’une cloche plus grosse.</p>
 </div>
 <div id="loi-de-fisher-snedecor-mathcalfnm" class="section level3 unnumbered">
 <h3>Loi de Fisher-Snedecor <span class="math inline">\(\mathcal{F}(n,m)\)</span></h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-268" class="definition"><strong>Définition 7.23  </strong></span>Soit <span class="math inline">\(U\)</span> et <span class="math inline">\(V\)</span> deux variables aléatoires indépendantes suivant une loi
+<p><span id="def:unnamed-chunk-271" class="definition"><strong>Définition 7.23  </strong></span>Soit <span class="math inline">\(U\)</span> et <span class="math inline">\(V\)</span> deux variables aléatoires indépendantes suivant une loi
 de <span class="math inline">\(\chi^2\)</span> respectivement à <span class="math inline">\(n\)</span> et <span class="math inline">\(m\)</span> degrés de liberté.</p>
 On dit que <span class="math inline">\(F= \frac{U/n}{V/m}\)</span> suit une loi de Fisher-Snedecor à
 <span class="math inline">\((n,m)\)</span> degrés de liberté. <span class="math inline">\(F \thicksim \mathcal{F}(n,m)\)</span>
@@ -994,7 +996,7 @@ observées et sert surtout dans les très nombreux tests d’analyse de
 variance et de covariance.
 </div>
 
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-270-1.png" width="80%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-273-1.png" width="80%" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="couple-de-variables-aleatoires-continues" class="section level2 unnumbered">
@@ -1003,7 +1005,7 @@ variance et de covariance.
 <h3>Densité conjointe</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-271" class="definition"><strong>Définition 7.24  </strong></span>On dit que <span class="math inline">\((X,Y)\)</span> est un couple aléatoire continu s’il existe une
+<p><span id="def:unnamed-chunk-274" class="definition"><strong>Définition 7.24  </strong></span>On dit que <span class="math inline">\((X,Y)\)</span> est un couple aléatoire continu s’il existe une
 fonction <span class="math inline">\(f: \mathbb{R}^2 \rightarrow \mathbb{R}\)</span> telle que pour tout
 <span class="math inline">\(D \subseteq \mathbb{R}\)</span> on a</p>
 <span class="math display">\[P\{(X,Y) \in D\} = \iint\limits_{(x,y) \in D} f(x,y) dx dy\]</span>
