--- a/Statinf/index.html
+++ b/Statinf/index.html
@@ -312,12 +312,14 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="6.2" data-path="tests-dhypotheses-sur-deux-echantillons.html"><a href="tests-dhypotheses-sur-deux-echantillons.html#comparaison-de-deux-proportions"><i class="fa fa-check"></i><b>6.2</b> Comparaison de deux proportions</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-5.html"><a href="exercices-5.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp.html"><a href="tp.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Séance 9</b></span></li>
 <li class="chapter" data-level="7" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html"><i class="fa fa-check"></i><b>7</b> Tests de Khi-deux <span class="math inline">\(\chi^2\)</span></a><ul>
 <li class="chapter" data-level="7.1" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dajustement-de-chi2"><i class="fa fa-check"></i><b>7.1</b> Test d’ajustement de <span class="math inline">\(\chi^2\)</span></a></li>
 <li class="chapter" data-level="7.2" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dindependance-de-chi2"><i class="fa fa-check"></i><b>7.2</b> Test d’indépendance de <span class="math inline">\(\chi^2\)</span></a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-6.html"><a href="exercices-6.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-1.html"><a href="tp-1.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html#notions-de-probabilites"><i class="fa fa-check"></i>Notions de Probabilités</a><ul>
@@ -525,7 +527,8 @@ Tests d’hypothèses à partir d’un <strong>seul</strong> échantillon
 Séance 8
 </td>
 <td style="text-align:left;">
-Tests d’hypothèses à partir de <strong>deux</strong> échantillons
+Tests d’hypothèses à partir de <strong>deux</strong> échantillons, <br>
+Exercices et <strong>TP</strong>
 </td>
 </tr>
 <tr>
@@ -534,7 +537,8 @@ Séance 9
 </td>
 <td style="text-align:left;">
 Test d’ajustement de <span class="math inline">\(\chi^2\)</span>, <br>
-Test d’indépendance de <span class="math inline">\(\chi^2\)</span>
+Test d’indépendance de <span class="math inline">\(\chi^2\)</span>, <br>
+Exercices et <strong>TP</strong>
 </td>
 </tr>
 <tr>
