--- a/Statinf/variables-aleatoires-discretes.html
+++ b/Statinf/variables-aleatoires-discretes.html
@@ -31,7 +31,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-<link rel="prev" href="exercices-6.html"/>
+<link rel="prev" href="tp-1.html"/>
 <link rel="next" href="variables-aleatoires-continues.html"/>
 <script src="book_assets/jquery-2.2.3/jquery.min.js"></script>
 <link href="book_assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -312,12 +312,14 @@ code span.wa { color: #bf0303; } /* Warning */
 <li class="chapter" data-level="6.2" data-path="tests-dhypotheses-sur-deux-echantillons.html"><a href="tests-dhypotheses-sur-deux-echantillons.html#comparaison-de-deux-proportions"><i class="fa fa-check"></i><b>6.2</b> Comparaison de deux proportions</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-5.html"><a href="exercices-5.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp.html"><a href="tp.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Séance 9</b></span></li>
 <li class="chapter" data-level="7" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html"><i class="fa fa-check"></i><b>7</b> Tests de Khi-deux <span class="math inline">\(\chi^2\)</span></a><ul>
 <li class="chapter" data-level="7.1" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dajustement-de-chi2"><i class="fa fa-check"></i><b>7.1</b> Test d’ajustement de <span class="math inline">\(\chi^2\)</span></a></li>
 <li class="chapter" data-level="7.2" data-path="tests-de-khi-deux-chi2.html"><a href="tests-de-khi-deux-chi2.html#test-dindependance-de-chi2"><i class="fa fa-check"></i><b>7.2</b> Test d’indépendance de <span class="math inline">\(\chi^2\)</span></a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="exercices-6.html"><a href="exercices-6.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-1.html"><a href="tp-1.html"><i class="fa fa-check"></i>TP</a></li>
 <li class="part"><span><b>Rappel Probabilités</b></span></li>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html"><i class="fa fa-check"></i>Variables Aléatoires Discrètes</a><ul>
 <li class="chapter" data-level="" data-path="variables-aleatoires-discretes.html"><a href="variables-aleatoires-discretes.html#notions-de-probabilites"><i class="fa fa-check"></i>Notions de Probabilités</a><ul>
@@ -687,7 +689,7 @@ aussi les couples de variables aléatoires.</p>
 <h3>Définition, loi de probabilité</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-210" class="definition"><strong>Définition 7.1  </strong></span>On dit qu’une variable aléatoire réelle (v.a.r.) <span class="math inline">\(X\)</span> est <strong><em>discrète</em></strong>
+<p><span id="def:unnamed-chunk-213" class="definition"><strong>Définition 7.1  </strong></span>On dit qu’une variable aléatoire réelle (v.a.r.) <span class="math inline">\(X\)</span> est <strong><em>discrète</em></strong>
 (v.a.r.d.) si l’ensemble des valeurs que prend <span class="math inline">\(X\)</span> est fini ou infini
 dénombrable.</p>
 <p>Si on suppose <span class="math inline">\(X(\Omega)\)</span> l’ensemble des valeurs de <span class="math inline">\(X\)</span> qui admet un
@@ -718,7 +720,7 @@ généralement présentée dans un tableau.</p></li>
 <h3>Fonction de répartition d’une variable aléatoire discrète</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-211" class="definition"><strong>Définition 7.2  </strong></span>On appelle <em>fonction de répartition</em> de la v.a. <span class="math inline">\(X\)</span>, qu’on note <span class="math inline">\(F(a)\)</span>
+<p><span id="def:unnamed-chunk-214" class="definition"><strong>Définition 7.2  </strong></span>On appelle <em>fonction de répartition</em> de la v.a. <span class="math inline">\(X\)</span>, qu’on note <span class="math inline">\(F(a)\)</span>
 de la v.a.r.d. <span class="math inline">\(X\)</span>, ou <span class="math inline">\(F_X(a)\)</span>, la fonction définie pour tout réel <span class="math inline">\(a\)</span>,
 <span class="math inline">\(-\infty &lt; a &lt; \infty\)</span>, par</p>
 <span class="math display">\[F(a)=P(X \leq a)=\sum_{i / x_{i}\leq a} P(X=x_{i})\]</span>
@@ -813,7 +815,7 @@ la probabilité d’avoir exactement une pile.
      1 &amp; \quad \text{si $x \geq 3$}\\
 \end{array} \right.\]</span></p>
 <p>Le graphe de cette dernière est représentée dans la figure suivante:</p>
-<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-214-1.png" width="70%" style="display: block; margin: auto;" /></p>
+<p><img src="Statistique_infentielle_files/figure-html/unnamed-chunk-217-1.png" width="70%" style="display: block; margin: auto;" /></p>
 <p><strong>Exemple:</strong> Soit <span class="math inline">\(A\)</span> un événement quelconque. On appelle variable aléatoire <em>indicatrice</em> de cet événement <span class="math inline">\(A\)</span>, la variable aléatoire définie par: <span class="math display">\[X(\omega) = \left\{ 
 \begin{array}{l l}
  1 &amp; \quad \text{si $\omega \in A$}\\
@@ -874,7 +876,7 @@ de <span class="math inline">\(A\)</span>. La loi de probabilité de <span class
 <h3>Espérance mathématique</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-216" class="definition"><strong>Définition 7.3  </strong></span>Pour une variable aléatoire discrète <span class="math inline">\(X\)</span> de loi de probabilité <span class="math inline">\(p(.)\)</span>,
+<p><span id="def:unnamed-chunk-219" class="definition"><strong>Définition 7.3  </strong></span>Pour une variable aléatoire discrète <span class="math inline">\(X\)</span> de loi de probabilité <span class="math inline">\(p(.)\)</span>,
 on définit l’<em>espérance</em> de <span class="math inline">\(X\)</span>, notée <span class="math inline">\(E(X)\)</span>, par l’expression</p>
 <p><span class="math display">\[E(X)=\sum_{i \in \mathbb{N}} x_{i} p(x_i)\]</span></p>
 En termes concrets, l’espérance de <span class="math inline">\(X\)</span> est la moyenne pondérée des
@@ -897,7 +899,7 @@ possibles de <span class="math inline">\(X\)</span>.</p>
 <h3>Espérance d’une fonction d’une variable aléatoire</h3>
 
 <div class="theorem">
-<p><span id="thm:unnamed-chunk-217" class="theorem"><strong>Théorème 7.1  (Théorème du transfert)  </strong></span>Si X est une variable aléatoire discrète pouvant prendre ses valeurs
+<p><span id="thm:unnamed-chunk-220" class="theorem"><strong>Théorème 7.1  (Théorème du transfert)  </strong></span>Si X est une variable aléatoire discrète pouvant prendre ses valeurs
 parmi les valeurs <span class="math inline">\(x_i\)</span>, <span class="math inline">\(i \geq 1\)</span>, avec des probabilités respectives
 <span class="math inline">\(p(x_i)\)</span>, alors pour toute fonction réelle <span class="math inline">\(g\)</span> on a</p>
 <span class="math display">\[E(g(X)) = \sum_i g(x_i)p(x_i)\]</span>
@@ -905,7 +907,7 @@ parmi les valeurs <span class="math inline">\(x_i\)</span>, <span class="math in
 
 
 <div class="example">
-<p><span id="exm:unnamed-chunk-218" class="example"><strong>Exemple 7.1  </strong></span>Soit <span class="math inline">\(X\)</span> une variable aléatoire qui prend une des trois valeurs
+<p><span id="exm:unnamed-chunk-221" class="example"><strong>Exemple 7.1  </strong></span>Soit <span class="math inline">\(X\)</span> une variable aléatoire qui prend une des trois valeurs
 <span class="math inline">\(\{-1,0,1\}\)</span> avec les probabilités respectives</p>
 <p><span class="math display">\[P(X=-1) = 0.2 \quad \quad P(X=0)=0.5 \quad \quad P(X=1) = 0.3\]</span></p>
 Calculer <span class="math inline">\(E(X^2)\)</span>.
@@ -945,7 +947,7 @@ mathématique est linéaire:
 <h3>Variance</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-220" class="definition"><strong>Définition 7.4  </strong></span>La variance est un indicateur mesurant la dispersion des valeurs <span class="math inline">\(x_{i}\)</span>
+<p><span id="def:unnamed-chunk-223" class="definition"><strong>Définition 7.4  </strong></span>La variance est un indicateur mesurant la dispersion des valeurs <span class="math inline">\(x_{i}\)</span>
 que peut prendre la v.a. <span class="math inline">\(X\)</span> et son espérance <span class="math inline">\(E(X)\)</span>. On appelle
 <strong>variance</strong> de X, que l’on note <span class="math inline">\(V(X)\)</span>, la quantité</p>
 <span class="math display">\[V(X)=E\big[ (X-E(X))^2 \big]\]</span> lorsque cette quantité existe.<br />
@@ -992,7 +994,7 @@ en effet: <span class="math display">\[\begin{aligned}
 <h3>Ecart-type</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-221" class="definition"><strong>Définition 7.5  </strong></span>La racine carrée de <span class="math inline">\(V(X)\)</span> est appelée l’<strong><em>écart-type</em></strong> de <span class="math inline">\(X\)</span>, qui se
+<p><span id="def:unnamed-chunk-224" class="definition"><strong>Définition 7.5  </strong></span>La racine carrée de <span class="math inline">\(V(X)\)</span> est appelée l’<strong><em>écart-type</em></strong> de <span class="math inline">\(X\)</span>, qui se
 note <span class="math inline">\(\sigma_{X}\)</span>. On a</p>
 <p><span class="math display">\[\sigma_{X} = \sqrt{V(X)}\]</span></p>
 <span class="math inline">\(\sigma_{X}\)</span> s’exprime dans les mêmes unités de mesure que la variable
@@ -1013,7 +1015,7 @@ Bienaymé-Tchebychev</em>.</p></li>
 <h4>Inégalité de Bienaymé-Tchebychev</h4>
 
 <div class="theorem">
-<p><span id="thm:unnamed-chunk-222" class="theorem"><strong>Théorème 7.2  </strong></span>Soit <span class="math inline">\(X\)</span> une variable aléatoire d’espérance <span class="math inline">\(\mu\)</span> et de variance
+<p><span id="thm:unnamed-chunk-225" class="theorem"><strong>Théorème 7.2  </strong></span>Soit <span class="math inline">\(X\)</span> une variable aléatoire d’espérance <span class="math inline">\(\mu\)</span> et de variance
 <span class="math inline">\(\sigma^2\)</span>. Pour tout <span class="math inline">\(\varepsilon &gt; 0\)</span>, on a l’inégalité suivante:
 <span class="math display">\[P\left(|X-E(X)| \geq \varepsilon \right) \leq \frac{\sigma^2}{\varepsilon^2}\]</span></p>
 On peut l’écrire autrement. Soit <span class="math inline">\(k=\varepsilon/\sigma\)</span>.
@@ -1027,7 +1029,7 @@ On peut l’écrire autrement. Soit <span class="math inline">\(k=\varepsilon/\s
 </div>
 
 <div class="theorem">
-<span id="thm:unnamed-chunk-224" class="theorem"><strong>Théorème 7.3  (Inégalité de Markov)  </strong></span>Soit <span class="math inline">\(X\)</span> une variable aléatoire à valeur non
+<span id="thm:unnamed-chunk-227" class="theorem"><strong>Théorème 7.3  (Inégalité de Markov)  </strong></span>Soit <span class="math inline">\(X\)</span> une variable aléatoire à valeur non
 négatives. Pour tout réel <span class="math inline">\(a &gt; 0\)</span> <span class="math display">\[P(X&gt;a) \leq \frac{E(X)}{a}\]</span>
 </div>
 
@@ -1440,7 +1442,7 @@ peut définir la loi conditionnelle de <span class="math inline">\(X\)</span> sa
 <h3>Indépendance de variables aléatoires</h3>
 
 <div class="theorem">
-<p><span id="thm:unnamed-chunk-228" class="theorem"><strong>Théorème 7.4  </strong></span>On dit que deux v.a.r.d sont indépendantes si et seulement si</p>
+<p><span id="thm:unnamed-chunk-231" class="theorem"><strong>Théorème 7.4  </strong></span>On dit que deux v.a.r.d sont indépendantes si et seulement si</p>
 <span class="math display">\[P(X=x_i;Y=y_j) = P(X=x_i) P(Y=y_j) \quad \quad \forall \, i = 1,2,\ldots,l \text{ et }  j = 1,2,\ldots,k\]</span>
 </div>
 
@@ -1505,7 +1507,7 @@ corrélées.</p></li>
 <h3>Loi uniforme discrète <span class="math inline">\(\mathcal{U}(n)\)</span></h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-229" class="definition"><strong>Définition 7.6  </strong></span>Une distribution de probabilité suit une loi uniforme lorsque toutes les
+<p><span id="def:unnamed-chunk-232" class="definition"><strong>Définition 7.6  </strong></span>Une distribution de probabilité suit une loi uniforme lorsque toutes les
 valeurs prises par la variable aléatoire sont équiprobables. Si <span class="math inline">\(n\)</span> est
 le nombre de valeurs différentes prises par la variable aléatoire alors
 on a:</p>
@@ -1582,7 +1584,7 @@ calculer directement les moments de <span class="math inline">\(X\)</span>: <spa
 <h3>Loi de Bernoulli <span class="math inline">\(\mathcal{B}(p)\)</span></h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-231" class="definition"><strong>Définition 7.7  </strong></span>On réalise une expérience dont le résultat sera interprété soit comme un
+<p><span id="def:unnamed-chunk-234" class="definition"><strong>Définition 7.7  </strong></span>On réalise une expérience dont le résultat sera interprété soit comme un
 succès soit comme un échec. On définit alors la variable aléatoire <span class="math inline">\(X\)</span>
 en lui donnant la valeur 1 lors d’un succès et 0 lors d’un échec
 (variable indicatrice). La loi de probabilité de <span class="math inline">\(X\)</span> est alors</p>
@@ -1629,7 +1631,7 @@ Une variable de Bernoulli n’est donc qu’une variable binomiale de paramètre
 
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-234" class="definition"><strong>Définition 7.8  </strong></span>Si on effectue <span class="math inline">\(n\)</span> épreuves successives indépendantes où on note à
+<p><span id="def:unnamed-chunk-237" class="definition"><strong>Définition 7.8  </strong></span>Si on effectue <span class="math inline">\(n\)</span> épreuves successives indépendantes où on note à
 chaque fois la réalisation ou non d’un certain événement <span class="math inline">\(A\)</span>, on obtient une suite de la forme <span class="math inline">\(AA\bar{A}A\bar{A}\ldots \bar{A}AA\)</span>. Soit <span class="math inline">\(X\)</span> le nombre de réalisations de <span class="math inline">\(A\)</span>. On définit ainsi une v.a. <span class="math inline">\(X\)</span> qui suit une loi binomiale de paramètres <span class="math inline">\(n\)</span> et <span class="math inline">\(p=P(A)\)</span>, caractérisée par
 <span class="math inline">\(X(\Omega)=\{0, 1,\ldots, n\}\)</span> :</p>
 <p><span class="math display" id="eq:binom">\[\begin{equation}
@@ -1694,7 +1696,7 @@ suit une loi binomiale <span class="math inline">\(\mathcal{B} \left({n, 1/3}\ri
 avec <span class="math inline">\(E(X)=n/3\)</span> et <span class="math inline">\(V(X)=2n/9\)</span>.</p>
 
 <div class="theorem">
-<span id="thm:unnamed-chunk-236" class="theorem"><strong>Théorème 7.5  </strong></span>Si <span class="math inline">\(X_1 \sim \mathcal{B} \left({n_1, p}\right)\)</span> et
+<span id="thm:unnamed-chunk-239" class="theorem"><strong>Théorème 7.5  </strong></span>Si <span class="math inline">\(X_1 \sim \mathcal{B} \left({n_1, p}\right)\)</span> et
 <span class="math inline">\(X_2 \sim \mathcal{B} \left({n_2, p}\right)\)</span>, les v.a. <span class="math inline">\(X_1\)</span> et <span class="math inline">\(X_2\)</span>
 étant indépendantes, alors
 <span class="math inline">\(X_1+X_2 \sim \mathcal{B} \left({n_1+n_2, p}\right)\)</span>. Ceci résulte de la
@@ -1718,7 +1720,7 @@ moyen.
 
 
 <div class="definition">
-<span id="def:unnamed-chunk-238" class="definition"><strong>Définition 7.9  </strong></span>Une v.a. <span class="math inline">\(X\)</span> suit une loi de Poisson de paramètre <span class="math inline">\(\lambda&gt;0\)</span> si c’est
+<span id="def:unnamed-chunk-241" class="definition"><strong>Définition 7.9  </strong></span>Une v.a. <span class="math inline">\(X\)</span> suit une loi de Poisson de paramètre <span class="math inline">\(\lambda&gt;0\)</span> si c’est
 une variable à valeurs entières, <span class="math inline">\(X(\Omega)=\mathbb{N}\)</span>, donc avec une
 infinité de valeurs possibles, de probabilité: <span class="math display">\[\label{eq:poisson}
     P(X=k)=e^{-\lambda} \frac{\lambda^k}{k!}, \quad k \in \mathbb{N}\]</span>
@@ -1748,7 +1750,7 @@ On en déduit: <span class="math display">\[\begin{aligned}
         &amp;=\lambda^2+\lambda-\lambda^2=\lambda.\end{aligned}\]</span></p>
 
 <div class="theorem">
-<span id="thm:unnamed-chunk-239" class="theorem"><strong>Théorème 7.6  </strong></span>Si <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sont deux variables <strong>indépendantes</strong> suivant des lois de
+<span id="thm:unnamed-chunk-242" class="theorem"><strong>Théorème 7.6  </strong></span>Si <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sont deux variables <strong>indépendantes</strong> suivant des lois de
 Poisson
 <span class="math display">\[X \sim \mathcal{P}(\lambda) \quad \text{et} \quad Y \sim \mathcal{P}(\mu)\]</span>
 alors leur somme suit aussi une loi de Poisson:
@@ -1971,7 +1973,7 @@ sont indépendantes.</p></li>
           </div>
         </div>
       </div>
-<a href="exercices-6.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="tp-1.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="variables-aleatoires-continues.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
