--- a/Statinf/tp-1.html
+++ b/Statinf/tp-1.html
@@ -500,7 +500,7 @@ Noir de jais
 <ol style="list-style-type: decimal">
 <li>Saisir les données.</li>
 <li>Visulaiser les données. (On pourra faire des diagrammes en bâtons)</li>
-<li>Construire le test du <span class="math inline">\(\chi^2\)</span> d’indépendance manuellement, en calculant les profils lignes et les profils colonnes, la stastique du test et la valuer critique afin de prendre une décision. Que concluez vous?</li>
+<li>Construire le test du <span class="math inline">\(\chi^2\)</span> d’indépendance manuellement, en calculant les profils lignes et les profils colonnes, la statistique du test et la valuer critique afin de prendre une décision. Que concluez vous?</li>
 <li>Retrouver les résultats du test en construisant le test du <span class="math inline">\(\chi^2\)</span> d’indépendance avec la fonction <code>chisq.test()</code>.</li>
 <li>Calculer les contributions au <span class="math inline">\(\chi^2\)</span> pour savoir qui sont les combinaisons qui contribuent le plus à la non-dépendance des deux variables.</li>
 </ol>
