--- a/Statinf/tp.html
+++ b/Statinf/tp.html
@@ -448,7 +448,7 @@ lecteur de conclure à l’acceptation de <span class="math inline">\(H_0\)</spa
 </div>
 <ol start="6" style="list-style-type: decimal">
 <li><p>Que concluez vous?</p></li>
-<li><p>Avez vous remarqué que c’est écrit <code>Welch Two Sample t-test</code> dans les résultats du test effectué? C’est parce que our comparer les moyennes des deux sous-populations il y a deux types de tests, l’un quand les variances inconnues sont différentes et l’autre quand elle sont égales. Tester l’égalité des variances en utilisant la fonction <code>var.test()</code>.</p></li>
+<li><p>Avez vous remarqué que c’est écrit <code>Welch Two Sample t-test</code> dans les résultats du test effectué? C’est parce que pour comparer les moyennes des deux sous-populations il y a deux types de tests, l’un quand les variances inconnues sont différentes et l’autre quand elle sont égales. Tester l’égalité des variances en utilisant la fonction <code>var.test()</code>.</p></li>
 </ol>
 <div class="rmdinsight">
 <p>Quand on utilise la fonction <code>t.test()</code> pour comparer les moyennes de deux sous-populations, un test d’égalité de variances est effectué. Si les variances sont différentes, c’est le test de Welch qui est appliqué. On peut préciser si les variances sont égales ou différentes avec l’argument <code>var.equal</code>. Nous pourrons aussi changer l’hypothèse alternative avec l’argument <code>alternative</code>. Ou aussi modifier le niveau de confiance du test.</p>
