--- a/Statinf/exercices-4.html
+++ b/Statinf/exercices-4.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-12-26" />
+<meta name="date" content="2020-01-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -529,7 +529,7 @@ variété est supposée égal à <span class="math inline">\(44\)</span> tonnes.
 </tbody>
 </table>
 <ol style="list-style-type: decimal">
-<li>Tester l’hypothèse que le poids moyenne est <span class="math inline">\(300\)</span> grammes avec niveau de confiance <span class="math inline">\(95\%\)</span>.</li>
+<li>Tester l’hypothèse que le poids moyen est <span class="math inline">\(300\)</span> grammes avec niveau de confiance <span class="math inline">\(95\%\)</span>.</li>
 <li>Expliquer comment répondre à la question précédente avec un IC bilatéral pour le poids moyen.
 </div></li>
 </ol>
