--- a/Statinf/tests-dhypotheses-sur-deux-echantillons.html
+++ b/Statinf/tests-dhypotheses-sur-deux-echantillons.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Mohamad Ghassany" />
 
 
-<meta name="date" content="2019-12-26" />
+<meta name="date" content="2020-01-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -643,7 +643,7 @@ loi de Bernoulli et on comparera leurs paramètres. <span class="math inline">\(
 \]</span></p>
 <p>La statistique du test pour <span class="math inline">\(H_0: p_1=p_2\)</span>, qui suit une loi <span class="math inline">\(\mathcal{N}(0,1)\)</span> lorsque <span class="math inline">\(H_0\)</span> est vraie, est alors</p>
 <p><span class="math display">\[
-Z_0 = \sqrt{ \frac{\hat{p}_1-\hat{p}_2}{\hat{p}(1-\hat{p}) \big[ \frac{1}{n_1} + \frac{1}{n_2} \big]}  }
+Z_0 = \frac{\hat{p}_1-\hat{p}_2}{\sqrt{ \hat{p}(1-\hat{p}) \big[ \frac{1}{n_1} + \frac{1}{n_2} \big]}}
 \]</span></p>
 <div class="rmdinsight">
 <p><strong>Critère de rejet de <span class="math inline">\(H_{0}\)</span>:</strong></p>
